fix ? not aligned with label in mobile (stage 3)

--- a/src/newSeed/baseStage.scss
+++ b/src/newSeed/baseStage.scss
@@ -579,7 +579,6 @@
       }
       .labelContainer {
         width: unset;
-        margin-bottom: 5px;
       }
     }
     .labeledQuestion {
